--- a/solution/src/components/Form/form.css
+++ b/solution/src/components/Form/form.css
@@ -1,3 +1,5 @@
+/* FORM STYLES */
+
 .form {
   display: grid;
 }
@@ -25,11 +27,6 @@ label {
   margin-bottom: 96px;
 }
 
-.error-message {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-}
-
 input,
 select {
   font-size: 16px;
@@ -51,8 +48,7 @@ select {
   flex-direction: row;
   justify-content: flex-end;
 }
-
-.actions button {
+button {
   font-size: 16px;
   padding: 0 16px;
   height: 36px;
@@ -60,18 +56,18 @@ select {
   border: 1px solid #000;
   filter: drop-shadow(3px 3px 0px #000);
 }
-
-.actions button:hover {
+button:hover {
   filter: drop-shadow(0px 0px 0px #000);
 }
-
-.actions button:nth-child(1) {
+button:nth-child(1) {
   margin-right: 16px;
 }
 
-.error {
-  color: red;
-  font-size: 14px;
+/* ERROR MESSAGE STYLES */
+
+.error-message {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
 .valid {
@@ -80,4 +76,36 @@ select {
 
 .invalid {
   color: #c0392b;
+}
+
+/* TABLE STYLES */
+.table {
+  width: 70%;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: left;
+}
+
+th {
+  background-color: #ccc;
+  height: 16px;
+}
+
+tbody tr {
+  height: 32px;
+}
+
+td,
+th {
+  padding: 8px;
+}
+
+.even {
+  background-color: #e5e5e5;
+}
+
+.no-entries {
+  text-align: center;
+  font-size: 24px;
 }
