--- a/solution/src/index.css
+++ b/solution/src/index.css
@@ -8,10 +8,11 @@ body {
 }
 
 .container {
-  height: 100vh;
+  height: 99vh;
   max-width: 900px;
   margin: 0 auto;
   border: 2px solid black;
+  overflow-y: hidden;
 }
 
 .form {
