--- a/solution/src/components/Form/form.css
+++ b/solution/src/components/Form/form.css
@@ -109,3 +109,43 @@ th {
   text-align: center;
   font-size: 24px;
 }
+
+/* RESPONSIVE STYLES */
+
+@media (max-width: 899px) {
+  .form {
+    padding: 50px 10%;
+  }
+
+  .field {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 36px);
+  }
+
+  label {
+    display: flex;
+    justify-content: flex-start;
+    margin-right: 16px;
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  input {
+    grid-row: 2 / 3;
+    margin: 4px;
+  }
+
+  .name {
+    margin-bottom: 24px;
+  }
+
+  .location {
+    margin-bottom: 48px;
+  }
+
+  .error-message {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+}
